testdata/baselines/reference/submodule/conformance/jsDeclarationsComputedNames.errors.txt
index.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(4,19): error TS2300: Duplicate identifier 'x'.
index.js(8,22): error TS2300: Duplicate identifier 'arg'.


==== index.js (3 errors) ====
    const TopLevelSym = Symbol();
    const InnerSym = Symbol();
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        [TopLevelSym](x = 12) {
                      ~
!!! error TS2300: Duplicate identifier 'x'.
            return x;
        },
        items: {
            [InnerSym]: (arg = {x: 12}) => arg.x
                         ~~~
!!! error TS2300: Duplicate identifier 'arg'.
        }
    }
    
==== index2.js (0 errors) ====
    const TopLevelSym = Symbol();
    const InnerSym = Symbol();
    
    export class MyClass {
        static [TopLevelSym] = 12;
        [InnerSym] = "ok";
        /**
         * @param {typeof TopLevelSym | typeof InnerSym} _p
         */
        constructor(_p = InnerSym) {
            // switch on _p
        }
    }
    